--- a/demo/index.html
+++ b/demo/index.html
@@ -4,13 +4,13 @@
 	<meta charset="UTF-8" />
 	<title></title>
 	<meta name="description" content="" />
-	<script src="./index.js" defer></script>
+	<script src="./placeimag.js" defer></script>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<img data-src='["./bird-40.jpg", "./bird-70.jpg"]' src="./bird-100.jpg">
+	<img data-src='["./bird-40.jpg", "./bird.jpg"]' src="./bird-70.jpg">
 	<noscript>
-		<img  src="./bird-70.jpg">
+		Need javascript
 	</noscript>
 </body>
 </html>
